src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationStringAssignInt.deca
{
	String x;
	x = 3;
	println(x);
}